# High-Bitdiwth-Emulation

./: CMakeLists.txt  Gemm.cu  Gemm.h  common.h  error.cpp  error.h  main.cpp  main.cu  random_sample.cpp  random_sample.h  transformer.cpp  transformer.h
test/cuda_vs_tensor/api/: CMakeLists.txt  main.cu
test/cuda_vs_tensor/stride/: data  data_07_02  data_07_12  log_07_02  main.cu  run.py
test/transformer/: CMakeLists.txt  transformerTest.cpp
